--- a/TV/RELEASE/release.json
+++ b/TV/RELEASE/release.json
@@ -1,1 +1,1 @@
-[{"name":"爬虫源","apiurl":"http://diver88.github.io/TV/RELEASE/reptile.json"},{"name":"BILI源","apiurl":"https://diver88.github.io/TV/BILI/bili.txt"},{"name":"测试0826","apiurl":"http://52bsj.vip:81/api/v3/file/get/41355/0826.json?sign=_lFIrvSQcxNeKNkkd4bOx2DD_H4MYLOir-O8eY3ULHE%3D%3A0"}]
+[{"name":"爬虫源","apiurl":"http://diver88.github.io/TV/RELEASE/reptile.json"},{"name":"BILI源","apiurl":"https://diver88.github.io/TV/BILI/bili.txt"},{"name":"测试0826+","apiurl":"http://52bsj.vip:81/api/v3/file/get/41355/0826.json?sign=_lFIrvSQcxNeKNkkd4bOx2DD_H4MYLOir-O8eY3ULHE%3D%3A0"}]
